--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -85,7 +85,7 @@ commentstyle=\color{javagreen}}
 
 \begin{document}
 
-\title{Language-Parametric Techniques for Live Probes}
+\title{\textsc{LiveRec}: Framing Debug Protocols to Hotwire Probes}
 %\subtitle{Preparing Articles for Programming}% optional
 %\titlerunning{Preparing Articles for Programming} %optional, in case that the title is too long; the running title should fit into the top page column
 
